samples/_failures_safe/1761097455_cb63d1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_07f7c923.c: In function ‘main’:
./samples/SAFE/__tmp_07f7c923.c:150: error: expected ‘{’ at end of input
